# Seraphina.AGIv1.0.8

./: # Third-Party Notices.txt  # triad_miner.olang.txt  ### OctaLang Commands for Professio.txt  ### OctaLang v1.0 Full Language Ind.txt  .gitignore  1. Shift Summary (Vocabulary → Virt.txt  4D graphics.txt  4tier Octagramal Wheel.txt  === Threat simulate cosmic === test log.txt  Addressing the OctaML5 Runtime Issu.txt  AdminDashboards.txt  Analysis of φ (The Golden Ratio) in.txt  Answer to my question.txt  ApiKeyGeneratorPanel.txt  App deploy insructions.txt  Arduino Bot Manager.txt  ArduinoStatusDisplay.txt  Assumptions and ScopeGame Context T.txt  AtonomousNeuralControl.txt  Aurora-visusalizer.txt  AutonomousArduinoManager.txt  AutonomousQuantumHarmonics.txt  Avatar Harmonic Entity of Light.txt  AvatarEngine.txt  BrainWaveScanner.txt  BytesSec BreakdownHow It's Calculat.txt  CHECKSUMS.txt  CONTRIBUTING.md  CinemaQualityAvatar.txt  ClientApp_description.txt  CollectiveAIManager.txt  CollectiveBrainMonitor.txt  Concise Checklist [ ] Stand up Triad OctaLang.txt  Context Adding 3D Space to a 2D Scr.txt  Context and Incorporation of Proko.txt  Context and SolutionProblem Recap appRend.txt  Design and AssumptionsSolar SystemR.txt  DivineComplianceMonitor.txt  EXTRACT_INSTRUCTIONS.txt  Electron main process (CommonJS re.txt  (+72 more)
.github/workflows/: publish.yml  sign-installer.yml
SERAPHINA_AGI_FULL_RELEASE/SeraphinaGroqApp/: .gitignore  README.md  installer.iss  seraphina_gui.py
examples/: README.md
examples/seraphina_core/: manifest.json
examples/wheel_one/: manifest.json
glyph/: README.md  glyph-bootstrap.py  setup.py
glyph/glyph/: __init__.py  __main__.py  bootstrap.py  cli.py  doctor.py  gate.py  generator.py  identity.py  index.py  integrity.py  ledger.py  manifest.py  operations.py  registry.py  remote.py  resolution.py  resolver.py  rule24.py  sandbox.py  signals.py  (+2 more)
infra/: signing.bicep
npm/: README.md  package.json
prebuilt/: seraphina_core-1.0.0.glyph  wheel_one-1.0.0.glyph
scripts/: build_seraphina_glyph.py
seraphina/: __init__.py  cli.py  core.py  glyph_generator.py  language_bridge.py  rule_base.py  triad.py
seraphina-agi-only/: AGENTS.md  MANIFEST.in  README.md  advanced-language-engine.js  agent-response-schema.js  agi-self-optimizer.js  ai-learning-config.json  ai-learning-orchestrator.js  ai-learning-summary-ledger.jsonl  ai-memory-log.js  benchmark_v8.7.js  compile-wasm.bat  dashboard_updates_v8.7.py  glyph-wasm.ts  linux-octabit-quantum-core.js  ml-train-ledger.jsonl  ml-train-scoreboard.json  package.json  realworld_benchmark.js  release.py  requirements.txt  run-agi.js  scaling_benchmark.js  seraphina-train-ledger.jsonl  seraphina-train-scoreboard.json  setup.py
seraphina-agi-python/: README.md  setup.py
test/: test-roman-wheel.js
(+35 files in other folders)
