[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "seraphina-agi"
version = "1.0.8"
description = "Seraphina.AGI - deterministic Roman Wheel Triad core, binary-native glyph wizard"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Jason Wilson" }]
keywords = ["agi", "glyph", "roman-wheel", "wasm", "deterministic"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
# The sister `glyph` package lives at ./glyph/ - the install scripts
# `pip install ./glyph` first, then `pip install .` for this package.
dependencies = []

[project.urls]
Homepage = "https://github.com/SynerGro-AI/Seraphina.AGIv1.0.8"

[project.scripts]
seraphina = "seraphina.cli:main"

[tool.setuptools]
packages = ["seraphina"]
include-package-data = true

[tool.setuptools.package-data]
seraphina = ["lib/*.js"]
