[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "seraphina-agi"
version = "1.0.10"
description = "Seraphina.AGI - deterministic Roman Wheel Triad core, binary-native glyph wizard"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Jason Wilson" }]
keywords = ["agi", "glyph", "roman-wheel", "wasm", "deterministic"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
# The sister `glyph` package lives at ./glyph/ - the install scripts
# `pip install ./glyph` first, then `pip install .` for this package.
dependencies = []

[project.optional-dependencies]
# Optional: enables `seraphina plan-grok "<message>"` via the xAI API.
# Requires SERAPHINA_GROK_API_KEY in the environment. urllib.request is
# stdlib so no real dependency is pulled; this group exists so users can
# install with `pip install seraphina-agi[grok]` for explicit opt-in.
grok = []

[project.urls]
Homepage = "https://github.com/SynerGro-AI/Seraphina.AGIv1.0.8"

[project.scripts]
seraphina = "seraphina.cli:main"
glyph = "glyph.cli:main"

[tool.setuptools]
# Bundle the sister `glyph` package into the same wheel so a single
# `pip install seraphina-agi` installs both `import seraphina` and
# `import glyph` (and both console scripts).
packages = ["seraphina", "seraphina.lib", "seraphina.rwl", "glyph"]
include-package-data = true

[tool.setuptools.package-dir]
seraphina = "seraphina"
"seraphina.lib" = "seraphina/lib"
"seraphina.rwl" = "seraphina/rwl"
glyph = "glyph/glyph"

[tool.setuptools.package-data]
"seraphina.lib" = ["*.js"]
glyph = ["*.json", "*.txt"]
